tests/baselines/reference/modifierOnParameter1(strict=true).errors.txt
modifierOnParameter1.ts(2,16): error TS1090: 'declare' modifier cannot appear on a parameter.
modifierOnParameter1.ts(2,16): error TS7006: Parameter 'p' implicitly has an 'any' type.


==== modifierOnParameter1.ts (2 errors) ====
    class C {
       constructor(declare p) { }
                   ~~~~~~~
!!! error TS1090: 'declare' modifier cannot appear on a parameter.
                   ~~~~~~~~~
!!! error TS7006: Parameter 'p' implicitly has an 'any' type.
    }